# TinyMaix

./: .gitignore  CMakeLists.txt  FP8_intro.md  README.md  README_ZH.md  benchmark.md  pyproject.toml  requirements.dev.txt  reward.md  tinyml_intro.md  updates.md
.github/workflows/: tests.yaml
doc/porting/: Port_CORE_CM0_on_Kintex-7_FPGA.md  Port_PicoRV32_on_GW2A_FPGA.md  Port_STM32G030.md  port_ MT7621A.md  port_ACM32F403.md  port_APM32F072.md  port_AT32F403A.md  port_BK7256.md  port_CH32V103.md  port_CH32V203.md  port_CH32V307.md  port_CH582.md  port_D1-H.md  port_ESP32-C3.md  port_ESP32-S2.md  port_ESP32-S3.md  port_ESP32.md  port_ESP8266.md  port_HPM6750.md  port_LPC4337.md  port_MM32F3270.md  port_NRF52832.md  port_Nuclei.md  port_PY32F0.md  port_RK3399.md  port_RiscyD2.md  port_SC5864.md  port_SSD201.md  port_STC32G12K128.md  port_STM32F103.md  port_STM32F411.md  port_STM32F767.md  port_STM32G474.md  port_STM32H750.md  port_STM32L496.md  port_SeeedXIAO.md  port_TH1520.md  port_W801.md  port_WebAssembly.md  port_Windows.md  (+6 more)
examples/: CMakeLists.txt  tm_examples.c  tm_examples.h
examples/auto_test/: auto_test.py
examples/build_test/: build_test.py
examples/cifar10/: CMakeLists.txt  main.c  tm_example_cifar10.c  tm_example_cifar10.h
examples/cifar10/pic/: img2c.py  pic2.h  pic3.h  pic4.h  pic5.h  pic7.h  pic8.h
examples/kws/: CMakeLists.txt  README.md  kws_mdl.h  main.c  mel_test.c
examples/kws/audio/: fbank0a.c  fbank0b.c  fbank1a.c  fbank2a.c  fbank2b.c  wav2array.py
examples/layer_test/: CMakeLists.txt  main.c
examples/maixhub_detection_fomo/: CMakeLists.txt  README.md  fomo.c  main.c
examples/maixhub_detection_fomo/include/: fomo.h  tm_port.h
examples/maixhub_detection_yolov2/: CMakeLists.txt  README.md  decoder_yolov2.c  main.c
examples/maixhub_detection_yolov2/include/: decoder_yolov2.h  tinymaix.h  tm_port.h
examples/maixhub_image_classification/: CMakeLists.txt  README.md  main.c
examples/maixhub_image_classification/include/: tm_port.h
examples/mbnet/: CMakeLists.txt  incbin.h  label.c  label.h  main.c  mbnet_save.ipynb  pic128.h  pic96.h  tm_example_mbnet.c  tm_example_mbnet.h
examples/mnist/: CMakeLists.txt  main.c  mnist_train.ipynb  tm_example_mnist.c  tm_example_mnist.h
examples/mnist_arduino/: readme.md  tinymaix.h  tinymaix.ino  tm_layers.cpp  tm_model.cpp  tm_port.h  tm_stat.cpp
examples/vww/: CMakeLists.txt  main.c  tm_example_vww.c  tm_example_vww.h
examples/vww/pic/: img2c.py  pic_noperson1.h  pic_noperson2.h  pic_noperson3.h  pic_person1.h  pic_person2.h  pic_person3.h
include/: tinymaix.h  tm_port.h
msvc/: .gitignore  TinyMaix.sln
msvc/TinyMaix/: TinyMaix.vcxproj  TinyMaix.vcxproj.filters
msvc/TinyMaix_mbnet/: TinyMaix_mbnet.vcxproj  TinyMaix_mbnet.vcxproj.filters
msvc/TinyMaix_mnist/: TinyMaix_mnist.vcxproj  TinyMaix_mnist.vcxproj.filters
msvc/cifar10/: cifar10.vcxproj  cifar10.vcxproj.filters
msvc/kws/: kws.vcxproj  kws.vcxproj.filters
msvc/vww/: vww.vcxproj  vww.vcxproj.filters
src/: arch_O0.h  arch_O1.h  arch_O2.h  arch_arm_mvei.h  arch_arm_neon.h  arch_arm_simd.h  arch_cpu.h  arch_cskyv2.h  arch_rv32p.h  arch_rv64v.h  arch_x86_sse2.h  tm_layers.c  tm_layers_O1.c  tm_layers_fp8.c  tm_model.c  tm_stat.c
tools/: convert.py  h5_to_tflite.py  img2c.py  requirements.txt  tflite2tmdl.py  tflite_reader.py
tools/h5/: cifar10.h5  mbnet96_0.25.h5  mnist_resnet.h5  vww96.h5
tools/tflite/: cifar10_f.tflite  cifar10_q.tflite  mbnet128_0.25_f.tflite  mbnet128_0.25_q.tflite  mbnet96_0.25_f.tflite  mbnet96_0.25_q.tflite  mnist_resnet_f.tflite  mnist_resnet_q.tflite  mnist_valid_f.tflite  mnist_valid_q.tflite  vww96_f.tflite  vww96_q.tflite
tools/tmdl/: cifar10_f.h  cifar10_q.h  mbnet128_0.25_f.tmdl  mbnet128_0.25_q.h  mbnet128_0.25_q.tmdl  mbnet96_0.25_q.h  mnist_arduino_q.h  mnist_dw_f.h  mnist_fp8_143.h  mnist_fp8_152.h  mnist_nnom_q.h  mnist_q_valid.h  mnist_q_valid.tmdl  mnist_resnet_f.h  mnist_resnet_q.h  mnist_valid_f.h  mnist_valid_q.h  mnist_valid_q_be.h  vww96_q.h
