
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "include", "tools" ]

[tool.hatch.build.targets.wheel.sources]
"src" = "tinymaix/src"
"include" = "tinymaix/include"
"tools" = "tinymaix/tools"

[project]
name = "TinyMaix"
readme = "README.md"
requires-python = ">= 3.8"
keywords = ["machine learning", "deep learning", "microcontroller", "embedded"]
version = "0.0.1"

dependencies = [
  "keras<3.0.0",
  "pillow>=10.0.0",
]

classifiers = [
  "License :: OSI Approved :: Apache Software License",
]


[project.urls]
Homepage = "https://github.com/sipeed/TinyMaix"
Documentation = "https://github.com/sipeed/TinyMaix"
Repository = "https://github.com/sipeed/TinyMaix"

